--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,12 @@ sentence-transformers = "^2.2.2"
 pytest = "^7.4.0"
 mypy = "^1.4.1"
 types-beautifulsoup4 = "^4.12.0.5"
+pytest-env = "^0.8.2"
+
+[tool.pytest.ini_options]
+env = [
+    "TESTING = true"
+]
 
 [build-system]
 requires = ["poetry-core"]
